--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "import/no-anonymous-default-export": [2, {"allowAnonymousFunction": true}]
+  "extends": ["next", "next/core-web-vitals"]
 }
