--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.21.1",
     "next": "11.0.1",
     "next-i18next": "^8.5.5",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "sass": "^1.35.1"
   },
   "devDependencies": {
