--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "11.0.1",
+    "next": "^10.2.3",
     "next-i18next": "^8.5.5",
     "qrcode.react": "^1.0.1",
     "react": "17.0.2",
