--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "highlight.js": "^11.5.0",
     "next": "^10.2.3",
     "next-i18next": "^8.5.5",
     "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-hot-toast": "^2.1.1",
+    "react-simple-code-editor": "^0.11.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
