--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "eslint-config-prettier": "^8.5.0",
     "next": "^10.2.3",
     "next-i18next": "^8.5.5",
+    "prettier": "^2.7.1",
     "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
